--- a/easymedia/build.gradle
+++ b/easymedia/build.gradle
@@ -1,12 +1,25 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+
+
+androidExtensions {
+    experimental = true
+}
+
+publish {
+    userOrg = 'ycofish'
+    groupId = 'com.ryanyu'
+    uploadName = 'EasyMedia'
+    artifactId = 'easy-media'
+    publishVersion = '0.0.15'
+    desc = 'Ryan Yu Easy Media'
+    website = 'https://github.com/ycofish/easymedia'
+}
 
 android {
     compileSdkVersion 28
-
-
 
     defaultConfig {
         minSdkVersion 21
@@ -33,9 +46,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-}
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2' }
 repositories {
     mavenCentral()
 }
